--- a/Sem4/WWW/Lista2/index.html
+++ b/Sem4/WWW/Lista2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header>
@@ -66,15 +66,6 @@
     </main>
     <footer>
         <p>&copy; 2025 Rafał Wochna 279752. Wszelkie prawa zastrzeżone.</p>
-        <p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px"
-                    src="http://jigsaw.w3.org/css-validator/images/vcss"
-                    alt="Poprawny CSS!" />
-            </a>
-        </p>
-               
-        
     </footer>
 </body>
 </html>
